# lesson-12-2

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: main.py  news.py  save_to_file.py
